# GM-Assistant

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE
.github/workflows/: ci.yml
modules/: CMakeLists.txt
modules/characters/: CMakeLists.txt  character.cpp
modules/characters/include/: character.h
modules/locations/: CMakeLists.txt  location.cpp
modules/locations/include/: location.h
modules/story/: CMakeLists.txt  story.cpp  story_node.cpp
modules/story/include/: story.h  story_node.h
src/: main.cpp
tests/: CMakeLists.txt
tests/unit/: character.test.cpp  story.test.cpp
