SET(LIBRARY_NAME story)

SET(LIBRARY_SRCS
    story.cpp
    story_node.cpp
)

SET(LIBRARY_HEADERS
    include/story.h
    include/story_node.h
)

add_library(${LIBRARY_NAME} STATIC
    ${LIBRARY_SRCS}
    ${LIBRARY_HEADERS}
)

target_include_directories(${LIBRARY_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
